# 1.3.0

* Allow style names to be mapped by prefix. For instance:

      r[style-name^='Code '] => code

* Add default style mappings for Heading 5 and Heading 6.

* Allow escape sequences in style IDs, style names and CSS class names.

* Allow a separator to be specified when HTML elements are collapsed.

# 1.2.5

* Ignore bold, italic, underline and strikethrough elements that have a value of
  false or 0.

# 1.2.4

* Ignore v:imagedata elements without relationship ID with warning.

# 1.2.3

* Expect end token when parsing style mappings. This causes warnings to be
  emitted instead of silenting ignoring unparsed tokens.

# 1.2.2

* Ignore blank lines in style map.

# 1.2.1

* Use alt text title as alt text for images when the alt text description is
  missing entirely.

# 1.2.0

* Throw more informative error when word/document.xml cannot be found.

* Generate messages of type "error" instead of "warning" when image conversion
  throws an exception.
  
* Use alt text title as alt text for images when the alt text description is
  blank.

# 1.1.0

* Add support for comments.

# 1.0.4

* Add support for w:sdt elements. This allows the bodies of content controls,
  such as bibliographies, to be converted.

* Avoid stack overflows when elements have many children.

# 1.0.3

* Actually add support for table cells spanning multiple rows.

# 1.0.2

* Add support for table cells spanning multiple rows.

# 1.0.1

* Add support for table cells spanning multiple columns.

# 1.0.0

* Remove deprecated convertUnderline option.

* Officially support ID prefixes.

* Generated IDs no longer insert a hyphen after the ID prefix.

* The default ID prefix is now the empty string rather than a random number
  followed by a hyphen.

* Rename mammoth.images.inline to mammoth.images.imgElement to better reflect
  its behaviour.

# 0.3.33

* Improve collapsing of elements when there are empty elements.

# 0.3.32

* Allow bold and italic style mappings to be configured.

# 0.3.31
