@@ -1,3 +1,5 @@
+var _ = require("underscore");
+
 var docxReader = require("./docx/docx-reader");
 var docxStyleMap = require("./docx/style-map");
 var DocumentConverter = require("./document-to-html").DocumentConverter;
@@ -27,24 +29,21 @@ function convertToMarkdown(input, options) {
 }
 
 function convert(input, options) {
-    options = Object.create(options || {});
+    options = readOptions(options);
     
     return unzip.openZip(input)
         .tap(function(docxFile) {
-            if (!options.styleMap) {
-                return docxStyleMap.readStyleMap(docxFile).then(function(styleMap) {
-                    options.styleMap = styleMap || "";
-                });
-            }
+            return docxStyleMap.readStyleMap(docxFile).then(function(styleMap) {
+                options.embeddedStyleMap = styleMap;
+            });
         })
         .then(function(docxFile) {
-            var fullOptions = readOptions(options);
             return docxReader.read(docxFile, input)
                 .then(function(documentResult) {
-                    return documentResult.map(fullOptions.transformDocument);
+                    return documentResult.map(options.transformDocument);
                 })
                 .then(function(documentResult) {
-                    return convertDocumentToHtml(documentResult, fullOptions);
+                    return convertDocumentToHtml(documentResult, options);
                 });
         });
 }
@@ -55,9 +54,10 @@ function readEmbeddedStyleMap(input) {
 }
 
 function convertDocumentToHtml(documentResult, options) {
-    var parsedOptions = Object.create(options);
-    var styleMapResult = parseStyleMap(options.styleMap);
-    parsedOptions.styleMap = styleMapResult.value;
+    var styleMapResult = parseStyleMap(options.readStyleMap());
+    var parsedOptions = _.extend({}, options, {
+        styleMap: styleMapResult.value
+    });
     var documentConverter = new DocumentConverter(parsedOptions);
     
     return documentResult.flatMapThen(function(document) {
